@@ -1,5 +1,14 @@
 2019-11-15  Jer Noble  <jer.noble@apple.com>
 
+        Unreviewed Mojave build fix after r252501; wrap calls to AVContentKeyRequest.options in
+        ALLOW_NEW_API_WITHOUT_GUARDS_BEGIN / ALLOW_NEW_API_WITHOUT_GUARDS_END.
+
+        * platform/graphics/avfoundation/objc/CDMInstanceFairPlayStreamingAVFObjC.mm:
+        (WebCore::initTypeForRequest):
+        (WebCore::CDMInstanceSessionFairPlayStreamingAVFObjC::didProvideRequests):
+
+2019-11-15  Jer Noble  <jer.noble@apple.com>
+
         REGRESSION(r251895) - 'sinf' init data flow generates 'cenc' style encrypted messages
         https://bugs.webkit.org/show_bug.cgi?id=204239
         <rdar://problem/57166445>
